[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["andreyvaran <moscow.russia.mai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.1.1"
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.1.0"
envparse = "^0.2.0"
environs = "^9.5.0"
asyncpg = "^0.29.0"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
